--- a/config/boards/shields/SeaGlass/SeaGlass.dtsi
+++ b/config/boards/shields/SeaGlass/SeaGlass.dtsi
@@ -94,7 +94,8 @@
         compatible = "alps,ec11";
         a-gpios = <&gpio1 14 (GPIO_ACTIVE_HIGH | GPIO_PULL_UP)>;
         b-gpios = <&gpio1 15 (GPIO_ACTIVE_HIGH | GPIO_PULL_UP)>;
-        steps = <24>;
+        steps = <80>;
+        resolution = <4>;
         status = "disabled";
     };
 
@@ -103,7 +104,8 @@
         compatible = "alps,ec11";
         a-gpios = <&gpio1 13 (GPIO_ACTIVE_HIGH | GPIO_PULL_UP)>;
         b-gpios = <&gpio1 12 (GPIO_ACTIVE_HIGH | GPIO_PULL_UP)>;
-        steps = <24>;
+        steps = <80>;
+        resolution = <4>;
         status = "disabled";
     };
 
@@ -111,10 +113,10 @@
         compatible = "zmk,keymap-sensors";
         sensors = <&encoder_1 &encoder_2>;
         encoder_1 {
-            triggers-per-rotation = <24>;
+            triggers-per-rotation = <20>;
         };
         encoder_2 {
-            triggers-per-rotation = <24>;
+            triggers-per-rotation = <20>;
         };
     };
 
